# openreview-mcp

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
blog/: 2026-04-24-openreview-mcp.md  2026-04-24-what-iclr-reviewers-actually-complain-about.md
examples/: claude_desktop_config.json  demo_paper_deep_review.md  iclr2024_case_study.md
src/openreview_mcp/: __init__.py  cache.py  cli.py  client.py  schemas.py  server.py
src/openreview_mcp/tools/: __init__.py  _helpers.py  analysis.py  profiles.py  reviews.py  submissions.py  venues.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_schemas.py  test_tools.py
